--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "aws-amplify": "^1.1.40",
+    "aws-amplify-react": "^2.4.4",
     "aws-sdk": "^2.538.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
